# django-multiapp

./: .editorconfig  .gitignore  README.md  pyproject.toml
app/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  models.py
core/management/commands/: create_superuser_with_password.py
core/migrations/: 0001_initial.py  0002_initial.py  0003_alter_user_shops.py
public_app/assets/public/: package-lock.json  package.json  tailwind.config.js
public_app/index/: __init__.py  apps.py  views.py
public_app/templates/public/: 404.html  _layout.html  index.html
public_app/templates/public/components/: footer.html  header.html
public_app/templates/public/partials/: header.html
retail/: admin.py  apps.py  models.py
retail/migrations/: 0001_initial.py  0002_rename_created_report_created_at_and_more.py  0003_alter_report_started_at_alter_report_stopped_at_and_more.py
seller_app/assets/seller/: package-lock.json  package.json
seller_app/index/: apps.py  forms.py  urls.py  views.py
seller_app/templates/seller/: _layout.html  index.html  login.html
seller_app/templates/seller/components/: header.html
seller_app/templates/seller/partials/: header.html  report_form.html  report_list.html
